[gd_scene load_steps=4 format=1]

[ext_resource path="res://assets/menu/ingamemenu.gd" type="Script" id=1]
[ext_resource path="res://assets/art/ingame_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/theme/theme_btn_menu.tres" type="Theme" id=3]

[node name="IngameMenu" type="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 355.0
margin/top = 92.0
margin/right = 720.0
margin/bottom = 483.0
script/script = ExtResource( 1 )

[node name="Panel" type="TextureFrame" parent="."]

visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 89.0
margin/top = 66.0
margin/right = 236.0
margin/bottom = 422.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="btnReset" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 22.0
margin/top = 100.0
margin/right = 122.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset Level"
flat = false

[node name="btnContinue" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 22.0
margin/top = 39.0
margin/right = 122.0
margin/bottom = 69.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false

[node name="btnExit" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 22.0
margin/top = 268.0
margin/right = 122.0
margin/bottom = 298.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="btnHelp" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 22.0
margin/top = 156.0
margin/right = 122.0
margin/bottom = 186.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Help"
flat = false

[node name="btnSelectlvl" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 22.0
margin/top = 212.0
margin/right = 122.0
margin/bottom = 242.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Select Level"
flat = false

[node name="btnSaveGame" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 22.0
margin/top = 324.0
margin/right = 122.0
margin/bottom = 354.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[connection signal="pressed" from="Panel/btnReset" to="." method="_on_btnReset_pressed"]

[connection signal="pressed" from="Panel/btnContinue" to="." method="_on_btnContinue_pressed"]

[connection signal="pressed" from="Panel/btnExit" to="." method="_on_btnExit_pressed"]

[connection signal="pressed" from="Panel/btnHelp" to="." method="_on_btnHelp_pressed"]

[connection signal="pressed" from="Panel/btnSelectlvl" to="." method="_on_btnSelectlvl_pressed"]

[connection signal="pressed" from="Panel/btnSaveGame" to="." method="_on_btnSaveGame_pressed"]


